# Kita

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assetDownload.ps1  vcpkg.json
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.h  main.cpp
Engine/: CMakeLists.txt
Engine/assets/shaders/: DefaultEmptyFragment.glsl  DefaultFragment.glsl  DefaultFragmentColor.glsl  DefaultFragmentTexture.glsl  DefaultFrameBufferFragment.glsl  DefaultFrameBufferVertex.glsl  DefaultShadowMapVertex.glsl  DefaultSkyboxBuilderFragment.glsl  DefaultSkyboxBuilderVertex.glsl  DefaultSkyboxRenderFragment.glsl  DefaultSkyboxRenderVertex.glsl  DefaultVertex.glsl  DefaultVertexColor.glsl  DefaultVertexTexture.glsl  KitaCSMGeometry.glsl  KitaCSMVertex.glsl  KitaDefaultFragment.glsl  KitaDefaultVertex.glsl  KitaPostProcessFragment.glsl  KitaSkyboxBuilderFragment.glsl  KitaSkyboxBuilderIrradianceFragment.glsl  KitaSkyboxRenderFragment.glsl  KitaSkyboxRenderVertex.glsl
Engine/include/KitaEngine/: Kita.h  test.h
Engine/src/: DllMain.cpp  Engine.cpp  Engine.h  IGameInstance.cpp  IGameInstance.h  Input.cpp  Input.h  InputKeys.cpp  InputKeys.h  Logger.cpp  Logger.h  Window.cpp  Window.h  kitapch.cpp  kitapch.h  test.cpp
Engine/src/Asset/: AssetImporter.cpp  AssetImporter.h  KAsset.cpp  KAsset.h
Engine/src/Assets/: Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  KAsset.cpp  KAsset.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/src/Core/: Assert.h  DllMain.cpp  DllTemplate.h  Engine.cpp  Engine.h  FileReader.cpp  FileReader.h  Logger.cpp  Logger.h  Time.cpp  Time.h
Engine/src/Events/: EngineListeners.cpp  EngineListeners.h  Event.h  EventManager.cpp  EventManager.h  KeyboardEvents.cpp  KeyboardEvents.h  MouseEvents.cpp  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
Engine/src/File/: FileReader.cpp  FileReader.h
Engine/src/Input/: Input.cpp  Input.h  InputKeys.cpp  InputKeys.h
Engine/src/Instances/: IGameInstance.cpp  IGameInstance.h
Engine/src/Renderer/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Scene.cpp  Scene.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Renderer/Buffers/: BufferType.h  ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Renderer/GraphicsAPI/OpenGL/: GLElementBuffer.cpp  GLElementBuffer.h  GLRendererAPI.cpp  GLRendererAPI.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Engine/src/Renderer/GraphicsAPI/OpenGL/GLBuffers/: GLElementBuffer.cpp  GLElementBuffer.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderBuffer.cpp  GLRenderBuffer.h  GLShaderStorageBuffer.cpp  GLShaderStorageBuffer.h  GLUniformBuffer.cpp  GLUniformBuffer.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Engine/src/Renderer/GraphicsAPI/OpenGL/GLShaders/: GLShader.cpp  GLShader.h
Engine/src/Renderer/GraphicsAPI/OpenGL/GLTextures/: GLTexture.cpp  GLTexture.h
Engine/src/Renderer/GraphicsAPI/OpenGL/Shaders/: GLShader.cpp  GLShader.h
Engine/src/Renderer/Properties/: CameraProperties.h  LightShadowProperties.h  PhongProperties.h  PostProcessingProperties.h  SceneProperties.h  VertexProperties.h
Engine/src/Renderer/Scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Transformation.cpp  Transformation.h
Engine/src/Renderer/Scene/Components/: CameraComponent.h  Components.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  ParentComponent.h  RenderTags.h  TransformationComponent.h
Engine/src/Renderer/Scene/ECS/: Entity.cpp  Entity.h
Engine/src/Renderer/Scene/ECS/Components/: CameraComponent.h  Components.h  LightShadowComponents.h  MaterialComponent.h  MeshComponent.h  PathComponent.h  PostProcessingComponent.h  RelationshipComponents.h  RenderTags.h  SceneComponent.h  SkyboxComponent.h  TransformationComponent.h  UpdateTags.h
Engine/src/Renderer/Scene/ECS/Systems/: CameraSystem.cpp  CameraSystem.h  GeometrySystem.cpp  GeometrySystem.h  LightShadowSystem.cpp  LightShadowSystem.h  PostProcessingSystem.cpp  PostProcessingSystem.h  SkyboxSystem.cpp  SkyboxSystem.h  System.h
Engine/src/Renderer/Scene/Entities/: LightEntity.cpp  LightEntity.h  LightUtil.cpp  LightUtil.h  SkyboxEntity.cpp  SkyboxEntity.h
Engine/src/Renderer/Scene/Primitives/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/src/Renderer/Shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
Engine/src/Renderer/Structs/: GeometryHelper.cpp  GeometryHelper.h  GraphicsAPI.h  PhongProperties.h  RendererTypes.h  Vertex.h
Engine/src/Renderer/Systems/: CameraSystem.cpp  CameraSystem.h
Engine/src/Renderer/Textures/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Engine/src/Renderer/Types/: RenderingAPI.h
Engine/src/Renderer/Util/: CameraUtil.cpp  CameraUtil.h  CubemapUtil.cpp  CubemapUtil.h  GeometryUtil.cpp  GeometryUtil.h  LightUtil.cpp  LightUtil.h  PhongProperties.h  TransformationUtil.cpp  TransformationUtil.h
Engine/src/Util/: StringUtil.cpp  StringUtil.h
Engine/src/Window/: Window.cpp  Window.h
Engine/src/Window/Callbacks/: KeyboardCallbacks.cpp  KeyboardCallbacks.h  MouseCallbacks.cpp  MouseCallbacks.h  WindowCallbacks.cpp  WindowCallbacks.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  Sandbox.h  main.cpp
SandboxRunner/: CMakeLists.txt
SandboxRunner/src/: main.cpp
